// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner > renders when hasAccessToChatHistory=false 1`] = `
<div>
  <div
    class="_flex_4dswl_9 sc-bdvwhi eEBmvr"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <svg
        fill="var(--cpd-color-icon-info-primary)"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
        />
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
      >
        Guests will have limited access to the app
      </span>
    </div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <svg
        fill="var(--cpd-color-icon-info-primary)"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m16.1 13.3-1.45-1.45q.225-1.175-.675-2.2t-2.325-.8L10.2 7.4q.424-.2.863-.3A4.2 4.2 0 0 1 12 7q1.875 0 3.188 1.312Q16.5 9.625 16.5 11.5q0 .5-.1.938t-.3.862m3.2 3.15-1.45-1.4a11 11 0 0 0 1.688-1.588A9 9 0 0 0 20.8 11.5q-1.25-2.524-3.588-4.013Q14.875 6 12 6q-.724 0-1.425.1a10 10 0 0 0-1.375.3L7.65 4.85A11.1 11.1 0 0 1 12 4q3.575 0 6.425 1.887T22.7 10.8a.8.8 0 0 1 .1.313q.025.188.025.387a2 2 0 0 1-.125.7 10.9 10.9 0 0 1-3.4 4.25m-.2 5.45-3.5-3.45q-.874.274-1.762.413Q12.95 19 12 19q-3.575 0-6.425-1.887T1.3 12.2a.8.8 0 0 1-.1-.312 3 3 0 0 1 0-.763.8.8 0 0 1 .1-.3Q1.825 9.7 2.55 8.75A13.3 13.3 0 0 1 4.15 7L2.075 4.9a.93.93 0 0 1-.275-.688q0-.412.3-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275l17 17q.275.275.288.688a.93.93 0 0 1-.288.712.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275M5.55 8.4q-.725.65-1.325 1.425A9 9 0 0 0 3.2 11.5q1.25 2.524 3.588 4.012T12 17q.5 0 .975-.062.475-.063.975-.138l-.9-.95q-.274.075-.525.113A3.5 3.5 0 0 1 12 16q-1.875 0-3.187-1.312Q7.5 13.375 7.5 11.5q0-.274.038-.525.037-.25.112-.525z"
        />
      </svg>
      <span
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
      >
        They will not have access to the full chat history
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner > renders when hasAccessToChatHistory=true 1`] = `
<div>
  <div
    class="_flex_4dswl_9 sc-bdvwhi eEBmvr"
    style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
  >
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <svg
        fill="var(--cpd-color-icon-info-primary)"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
        />
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
      >
        Guests will have limited access to the app
      </span>
    </div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <svg
        fill="var(--cpd-color-icon-info-primary)"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.93 8A8 8 0 1 1 4 12a1 1 0 1 0-2 0c0 5.523 4.477 10 10 10s10-4.477 10-10a10 10 0 0 0-.832-4A10 10 0 0 0 12 2a9.99 9.99 0 0 0-8 3.999V4a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2H5.755A7.99 7.99 0 0 1 12 4a8 8 0 0 1 6.93 4"
        />
        <path
          d="M13 8a1 1 0 1 0-2 0v4a1 1 0 0 0 .293.707l2.83 2.83a1 1 0 0 0 1.414-1.414L13 11.586z"
        />
      </svg>
      <span
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31"
      >
        They will have access to the full chat history
      </span>
    </div>
  </div>
</div>
`;
